--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     </head>
     <body>
         
-        <div id="page-preloader" class="preloader">
+        <!-- <div id="page-preloader" class="preloader">
             <div class="loader">
             </div>
-        </div>
+        </div> -->
         
        <div id="home" class="header">
         <div class="header__video-wrapp">
